link to application updated from manage applications

--- a/app/views/v12/provider/account/application-new.html
+++ b/app/views/v12/provider/account/application-new.html
@@ -150,7 +150,7 @@ Manage apprentices
 <!-- RADIO BUTTONS     -->
 <section>
      
-      <form method="post">
+      <form method="post" action="application-new">
    
 
 
