--- a/app/views/v12/provider/view/3c-manage-applications-reviewed.html
+++ b/app/views/v12/provider/view/3c-manage-applications-reviewed.html
@@ -14,19 +14,6 @@ Manage vacancy
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
 
-    <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
-      <div class="govuk-notification-banner__header">
-        <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
-          Success
-        </h2>
-      </div>
-      <div class="govuk-notification-banner__content">
-        <h3 class="govuk-notification-banner__heading">
-          Applications successfully shared with employer
-        </h3>
-      </div>
-    </div>
-
         <span class="govuk-caption-l">Gloucestershire Health and Care NHS Foundation Trust</span>
     <h1 class="govuk-heading-l">Entry Level Development Engineer Apprentice</h1>
 
@@ -95,8 +82,7 @@ Manage vacancy
     {
       name: "Faizal Dawood",
       id: "C5662EA",
-      status: "Shared",
-      link: "3c-manage-applications-successful",
+      status: "In review",
       classes: "govuk-tag--yellow",
       date: "13 Oct 2022",
       disability: "Prefer not to say"
@@ -104,17 +90,15 @@ Manage vacancy
     {
       name: "Keith Stewart",
       id: "678CFR0",
-      status: "Shared",
-      link: "../account/application-new",
-      classes: "govuk-tag--yellow",
+      status: "Employer reviewed",
+      classes: "govuk-tag--blue",
       date: "13 Oct 2022",
       disability: "Prefer not to say"
     },
     {
       name: "Cynthia Perez",
       id: "FL13JK0",
-      status: "Shared",
-      link: "",
+      status: "In review",
       classes: "govuk-tag--yellow",
       date: "15 Oct 2022",
       disability: "No"
@@ -123,7 +107,6 @@ Manage vacancy
       name: "Susie Noble",
       id: "LL13J9H",
       status: "In review",
-      link: "",
       classes: "govuk-tag--yellow",
       date: "15 Oct 2022",
       disability: "No"
@@ -131,27 +114,24 @@ Manage vacancy
     {
       name: "Judy Ward",
       id: "897DW5T",
-      status: "Shared",
-      link: "",
-      classes: "govuk-tag--yellow",
+      status: "New",
+      classes: "govuk-tag--blue",
       date: "15 Oct 2022",
       disability: "No"
     },
     {
       name: "Charles Davis",
       id: "B2LH789",
-      status: "Shared",
-      link: "",
-      classes: "govuk-tag--yellow",
+      status: "New",
+      classes: "govuk-tag--blue",
       date: "15 Oct 2022",
       disability: "Prefer not to say"
     },
     {
       name: "Neena Patel",
       id: "78BH067",
-      status: "Shared",
-      link: "",
-      classes: "govuk-tag--yellow",
+      status: "New",
+      classes: "govuk-tag--blue",
       date: "15 Oct 2022",
       disability: "No"
     },
@@ -159,7 +139,6 @@ Manage vacancy
       name: "Jose Robinson",
       id: "LY6TY44",
       status: "New",
-      link: "",
       classes: "govuk-tag--blue",
       date: "15 Oct 2022",
       disability: "Prefer not to say"
@@ -168,7 +147,6 @@ Manage vacancy
       name: "John Smith",
       id: "39DBE1A",
       status: "New",
-      link: "",
       classes: "govuk-tag--blue",
       date: "16 Oct 2022",
       disability: "Yes"
@@ -177,7 +155,6 @@ Manage vacancy
       name: "Danielle Price",
       id: "HAK9F56",
       status: "New",
-      link: "",
       classes: "govuk-tag--blue",
       date: "16 Oct 2022",
       disability: "Yes"
@@ -186,7 +163,6 @@ Manage vacancy
       name: "Bryant Cantu",
       id: "5J9L5BF",
       status: "New",
-      link: "",
       classes: "govuk-tag--blue",
       date: "17 Oct 2022",
       disability: "No"
@@ -195,7 +171,6 @@ Manage vacancy
       name: "Loretta Giles",
       id: "3LN79HH",
       status: "New",
-      link: "",
       classes: "govuk-tag--blue",
       date: "17 Oct 2022",
       disability: "No"
@@ -204,7 +179,6 @@ Manage vacancy
       name: "Blake Peterson",
       id: "FL7J007",
       status: "New",
-      link: "",
       classes: "govuk-tag--blue",
       date: "17 Oct 2022",
       disability: "No"
@@ -213,7 +187,6 @@ Manage vacancy
       name: "Regina Carey",
       id: "98J98FG",
       status: "New",
-      link: "",
       classes: "govuk-tag--blue",
       date: "17 Oct 2022",
       disability: "No"
@@ -222,7 +195,6 @@ Manage vacancy
       name: "Millicent Thompson",
       id: "NJLP6GF",
       status: "New",
-      link: "",
       classes: "govuk-tag--blue",
       date: "17 Oct 2022",
       disability: "No"
@@ -231,7 +203,6 @@ Manage vacancy
       name: "Deena Lawson",
       id: "C78N0LK",
       status: "New",
-      link: "",
       classes: "govuk-tag--blue",
       date: "17 Oct 2022",
       disability: "No"
@@ -240,7 +211,6 @@ Manage vacancy
       name: "Garland Valenzuela",
       id: "45DL0HV",
       status: "New",
-      link: "",
       classes: "govuk-tag--blue",
       date: "17 Oct 2022",
       disability: "No"
@@ -249,7 +219,6 @@ Manage vacancy
       name: "Jerome Cross",
       id: "79ML444",
       status: "New",
-      link: "",
       classes: "govuk-tag--blue",
       date: "17 Oct 2022",
       disability: "No"
@@ -258,7 +227,6 @@ Manage vacancy
       name: "Ellen Collins",
       id: "6H0IL55",
       status: "Unsuccessful",
-      link: "",
       classes: "govuk-tag--red",
       date: "13 Oct 2022",
       disability: "No"
@@ -267,7 +235,6 @@ Manage vacancy
       name: "Wes Arnold",
       id: "PL67D9F",
       status: "Unsuccessful",
-      link: "",
       classes: "govuk-tag--red",
       date: "13 Oct 2022",
       disability: "No"
@@ -299,7 +266,7 @@ Manage vacancy
         {% for applicant in appsTableData %}
         <tr class="govuk-table__row">
           <td class="govuk-table__cell" role="gridcell" data-label="Name">
-            <a href="{{ applicant.link }}" class="govuk-link govuk-link--no-visited-state">{{ applicant.name }}</a>
+            <a href="../account/application-new" class="govuk-link govuk-link--no-visited-state">{{ applicant.name }}</a>
             <input type="hidden" name="{{ applicant.id }}-name" value="{{ applicant.name }}">
           </td>
           <td class="govuk-table__cell" role="gridcell" data-label="Application ID">{{ applicant.id }}</td>
