updated journeys for application actions so flows for UR

--- a/app/views/v12/provider/account/application-employer-reviewed-no.html
+++ b/app/views/v12/provider/account/application-employer-reviewed-no.html
@@ -17,34 +17,22 @@ Manage apprentices
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
-      <div class="govuk-notification-banner__header">
-        <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
-          Success
-        </h2>
-      </div>
-      <div class="govuk-notification-banner__content">
-        <h3 class="govuk-notification-banner__heading">
-          Application is in review
-        </h3>
-      </div>
-    </div>
 
     <section>
       <h1 class="govuk-heading-xl govuk-!-margin-bottom-0">
-        Keith Stewart
+        Judy Ward
       </h1>
       <div class="govuk-!-margin-bottom-6">
-        <span class="govuk-!-font-weight-bold">Application ID: </span>678CFR0
+        <span class="govuk-!-font-weight-bold">Application ID: </span>897DW5T
       </div>
 
       <div class="panel panel-border-narrow">
         <p class="govuk-body">
-          Keith Stewart<br>13 Old Hinckley Road<br>Nuneaton<br>Warwickshire<br>CV10 0AA
+          Judy Ward<br>13 Old Hinckley Road<br>Nuneaton<br>Warwickshire<br>CV10 0AA
         </p>
         <p class="govuk-body">
           07812345678
-          <br> <a href="mailto:faizal.dawood@domainname.co.uk">keith.stewart@domainname.co.uk</a>
+          <br> <a href="mailto:faizal.dawood@domainname.co.uk">judy.ward@domainname.co.uk</a>
         </p>
       </div>
     </section>
@@ -159,6 +147,16 @@ Manage apprentices
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
     </section>
 
+<!-- EMPLOYER RESPONSE -->
+    <section>
+      <h2 class="govuk-heading-l">Employer response</h2>
+
+      <p>No, the employer does not want to shortlist this applicant</p>
+
+      <br>
+      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+    </section>
+
 <!-- RADIO BUTTONS     -->
 <section>
      
@@ -173,36 +171,7 @@ Manage apprentices
                 What do you want to do with this application?
               </h1>
             </legend>
-
             <div class="govuk-radios" data-module="govuk-radios">
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="application" name="application" type="radio" value="review" checked="checked">
-                <label class="govuk-label govuk-radios__label" for="application">
-                  Review
-                </label>
-              </div>
-              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-contact">
-                <div class="govuk-form-group">
-                  <label class="govuk-label" for="contact-by-email">
-                  </label>
-                  <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" type="email" spellcheck="false" autocomplete="email">
-                </div>
-              </div>
-
-              
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="application-2" name="application" type="radio" value="share">
-                <label class="govuk-label govuk-radios__label" for="application-2">
-                  Share with employer
-                </label>
-              </div>
-              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-contact-2">
-                <div class="govuk-form-group">
-                  <label class="govuk-label" for="contact-by-phone">
-                  </label>
-                  <input class="govuk-input govuk-!-width-one-third" id="contact-by-phone" name="contact-by-phone" type="tel" autocomplete="tel">
-                </div>
-              </div>
 
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="application-3" name="application" type="radio" value="shortlist">
