--- a/app/views/v12/provider/view/7a-check-successful.html
+++ b/app/views/v12/provider/view/7a-check-successful.html
@@ -15,12 +15,12 @@ Manage vacancy
   <div class="govuk-grid-column-two-thirds">
 
 
-    <h1 class="govuk-heading-l">Are you sure you want to make this applicant successful? </h1>
+    <h1 class="govuk-heading-l">Are you sure you want to make a job offer to Keith Stewart? </h1>
 
     
 
         <p class="govuk-body" >
-          This will notify <b>[applicant name]</b> that their application has been successful.
+          This will notify <b>Keith Stewart</b> that they have been offered this apprenticeship. 
         </p>
 
 
