--- a/app/views/v12/provider/view/0-dashboard-reviewed.html
+++ b/app/views/v12/provider/view/0-dashboard-reviewed.html
@@ -5,6 +5,13 @@ Recruitment - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block content %}
+
+<style>
+  .govuk-notification-banner__content > * {
+    box-sizing: border-box;
+   max-width: 100%; }
+ </style>
+ 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
 
