--- a/app/views/v12/provider/view/3c-manage-applications.html
+++ b/app/views/v12/provider/view/3c-manage-applications.html
@@ -6,18 +6,19 @@ Manage vacancy
 
 {% block beforeContent %}
 {{super()}}
-<a href="javascript:history.back()" class="govuk-back-link">Back</a>
+<a href="3b-manage-vacancy" class="govuk-back-link">Back</a>
 
 {% endblock %}
 
 {% block content %}
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
+  <div class="govuk-grid-column-two-thirds">
 
         <span class="govuk-caption-l">Gloucestershire Health and Care NHS Foundation Trust</span>
     <h1 class="govuk-heading-l">Entry Level Development Engineer Apprentice</h1>
 
-
+  </div>
+</div>
 
 
 
@@ -82,8 +83,8 @@ Manage vacancy
     {
       name: "Faizal Dawood",
       id: "C5662EA",
-      status: "Shared",
-      link: "3c-manage-applications-successful",
+      status: "in review",
+      link: "",
       classes: "govuk-tag--yellow",
       date: "13 Oct 2022",
       disability: "Prefer not to say"
@@ -91,18 +92,18 @@ Manage vacancy
     {
       name: "Keith Stewart",
       id: "678CFR0",
-      status: "Shared",
+      status: "new",
       link: "../account/application-new",
-      classes: "govuk-tag--yellow",
+      classes: "govuk-tag--blue",
       date: "13 Oct 2022",
       disability: "Prefer not to say"
     },
     {
       name: "Cynthia Perez",
       id: "FL13JK0",
-      status: "Shared",
+      status: "new",
       link: "",
-      classes: "govuk-tag--yellow",
+      classes: "govuk-tag--blue",
       date: "15 Oct 2022",
       disability: "No"
     },
@@ -118,7 +119,7 @@ Manage vacancy
     {
       name: "Judy Ward",
       id: "897DW5T",
-      status: "Shared",
+      status: "in review",
       link: "",
       classes: "govuk-tag--yellow",
       date: "15 Oct 2022",
@@ -127,7 +128,7 @@ Manage vacancy
     {
       name: "Charles Davis",
       id: "B2LH789",
-      status: "Shared",
+      status: "in review",
       link: "",
       classes: "govuk-tag--yellow",
       date: "15 Oct 2022",
@@ -136,7 +137,7 @@ Manage vacancy
     {
       name: "Neena Patel",
       id: "78BH067",
-      status: "Shared",
+      status: "in review",
       link: "",
       classes: "govuk-tag--yellow",
       date: "15 Oct 2022",
