--- a/app/views/v12/provider/view/6a-share-applications.html
+++ b/app/views/v12/provider/view/6a-share-applications.html
@@ -62,7 +62,8 @@ Manage vacancy
     {
       name: "Faizal Dawood",
       id: "C5662EA",
-      status: "In review",
+      status: "in review",
+      link: "",
       classes: "govuk-tag--yellow",
       date: "13 Oct 2022",
       disability: "Prefer not to say"
@@ -70,16 +71,18 @@ Manage vacancy
     {
       name: "Keith Stewart",
       id: "678CFR0",
-      status: "New",
-      classes: "govuk-tag--blue",
+      status: "shared",
+      link: "",
+      classes: "govuk-tag--yellow",
       date: "13 Oct 2022",
       disability: "Prefer not to say"
     },
     {
       name: "Cynthia Perez",
       id: "FL13JK0",
-      status: "In review",
-      classes: "govuk-tag--yellow",
+      status: "new",
+      link: "",
+      classes: "govuk-tag--blue",
       date: "15 Oct 2022",
       disability: "No"
     },
@@ -87,6 +90,7 @@ Manage vacancy
       name: "Susie Noble",
       id: "LL13J9H",
       status: "In review",
+      link: "",
       classes: "govuk-tag--yellow",
       date: "15 Oct 2022",
       disability: "No"
@@ -94,24 +98,27 @@ Manage vacancy
     {
       name: "Judy Ward",
       id: "897DW5T",
-      status: "New",
-      classes: "govuk-tag--blue",
+      status: "in review",
+      link: "",
+      classes: "govuk-tag--yellow",
       date: "15 Oct 2022",
       disability: "No"
     },
     {
       name: "Charles Davis",
       id: "B2LH789",
-      status: "New",
-      classes: "govuk-tag--blue",
+      status: "in review",
+      link: "",
+      classes: "govuk-tag--yellow",
       date: "15 Oct 2022",
       disability: "Prefer not to say"
     },
     {
       name: "Neena Patel",
       id: "78BH067",
-      status: "New",
-      classes: "govuk-tag--blue",
+      status: "in review",
+      link: "",
+      classes: "govuk-tag--yellow",
       date: "15 Oct 2022",
       disability: "No"
     },
@@ -119,6 +126,7 @@ Manage vacancy
       name: "Jose Robinson",
       id: "LY6TY44",
       status: "New",
+      link: "",
       classes: "govuk-tag--blue",
       date: "15 Oct 2022",
       disability: "Prefer not to say"
@@ -127,6 +135,7 @@ Manage vacancy
       name: "John Smith",
       id: "39DBE1A",
       status: "New",
+      link: "",
       classes: "govuk-tag--blue",
       date: "16 Oct 2022",
       disability: "Yes"
@@ -135,6 +144,7 @@ Manage vacancy
       name: "Danielle Price",
       id: "HAK9F56",
       status: "New",
+      link: "",
       classes: "govuk-tag--blue",
       date: "16 Oct 2022",
       disability: "Yes"
@@ -143,6 +153,7 @@ Manage vacancy
       name: "Bryant Cantu",
       id: "5J9L5BF",
       status: "New",
+      link: "",
       classes: "govuk-tag--blue",
       date: "17 Oct 2022",
       disability: "No"
@@ -151,6 +162,7 @@ Manage vacancy
       name: "Loretta Giles",
       id: "3LN79HH",
       status: "New",
+      link: "",
       classes: "govuk-tag--blue",
       date: "17 Oct 2022",
       disability: "No"
@@ -159,6 +171,7 @@ Manage vacancy
       name: "Blake Peterson",
       id: "FL7J007",
       status: "New",
+      link: "",
       classes: "govuk-tag--blue",
       date: "17 Oct 2022",
       disability: "No"
@@ -167,6 +180,7 @@ Manage vacancy
       name: "Regina Carey",
       id: "98J98FG",
       status: "New",
+      link: "",
       classes: "govuk-tag--blue",
       date: "17 Oct 2022",
       disability: "No"
@@ -175,6 +189,7 @@ Manage vacancy
       name: "Millicent Thompson",
       id: "NJLP6GF",
       status: "New",
+      link: "",
       classes: "govuk-tag--blue",
       date: "17 Oct 2022",
       disability: "No"
@@ -183,6 +198,7 @@ Manage vacancy
       name: "Deena Lawson",
       id: "C78N0LK",
       status: "New",
+      link: "",
       classes: "govuk-tag--blue",
       date: "17 Oct 2022",
       disability: "No"
@@ -191,6 +207,7 @@ Manage vacancy
       name: "Garland Valenzuela",
       id: "45DL0HV",
       status: "New",
+      link: "",
       classes: "govuk-tag--blue",
       date: "17 Oct 2022",
       disability: "No"
@@ -199,6 +216,7 @@ Manage vacancy
       name: "Jerome Cross",
       id: "79ML444",
       status: "New",
+      link: "",
       classes: "govuk-tag--blue",
       date: "17 Oct 2022",
       disability: "No"
@@ -207,6 +225,7 @@ Manage vacancy
       name: "Ellen Collins",
       id: "6H0IL55",
       status: "Unsuccessful",
+      link: "",
       classes: "govuk-tag--red",
       date: "13 Oct 2022",
       disability: "No"
@@ -215,6 +234,7 @@ Manage vacancy
       name: "Wes Arnold",
       id: "PL67D9F",
       status: "Unsuccessful",
+      link: "",
       classes: "govuk-tag--red",
       date: "13 Oct 2022",
       disability: "No"
